--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,17 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.4.7"
+    "angular": "1.4.7",
+    "angular-sanitize": "1.4.7",
+    "angular-animate": "1.4.7",
+    "angular-bootstrap": "0.12.0",
+    "angular-route": "~1.3.15",
+    "angular-translate": "~2.8.0",
+    "angular-ui-router": "0.2.12",
+    "angular-translate-loader-static-files": "~2.7.0"
+  },
+  "resolutions": {
+    "angular": "1.4.7",
+    "angular-translate": "~2.8.0"
   }
 }
