--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "gulp-plumber": "^1.0.1",
     "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.4.1"
+    "gulp-uglify": "^1.4.1",
+    "gulp-webserver": "^0.9.1"
   },
   "scripts": {
     "postinstall": "bower install && bower update"
